Gained some lines to keep 12 pages.

--- a/ref3-system.bib
+++ b/ref3-system.bib
@@ -1,67 +1,24 @@
-@misc{Bounty, 
-title = {{The Bounty Network}}, 
-url = {\url{https://bounties.network/}},
+@article{QVWeyl, 
+author = {Weyl, E. Glen}, 
+title = {{The robustness of quadratic voting}}, 
+issn = {0048-5829}, 
+doi = {10.1007/s11127-017-0405-4}, 
+abstract = {{Lalley and Weyl (Quadratic voting, 2016) propose a mechanism for binary collective decisions, Quadratic Voting (QV), and prove its approximate efficiency in large populations in a stylized environment. They motivate their proposal substantially based on its greater robustness when compared with pre-existing efficient collective decision mechanisms. However, these suggestions are based purely on discussion of structural properties of the mechanism. In this paper, I study these robustness properties quantitatively in an equilibrium model. Given the mathematical challenges with establishing results on QV fully formally, my analysis relies on a number of structural conjectures that have been proven in analogous settings in the literature, but in the models I consider here. While most of the factors I study reduce the efficiency of QV to some extent, it is reasonably robust to all of them and quite robustly outperforms one-person-one-vote. Collusion and fraud, except on a very large scale, are deterred either by unilateral deviation incentives or by the reactions of non-participants to the possibility of their occurring. I am able to study aggregate uncertainty only for particular parametric distributions, but using the most canonical structures in the literature I find that such uncertainty reduces limiting efficiency, but never by a large magnitude. Voter mistakes or non-instrumental motivations for voting, so long as they are uncorrelated with values, may either enhance or harm efficiency depending on the setting. These findings contrast with existing (approximately) efficient mechanisms, all of which are highly sensitive to at least one of these factors.}}, 
+pages = {75--107}, 
+number = {1-2}, 
+volume = {172}, 
+journal = {Public Choice}, 
+local-url = {file://localhost/Users/bt_neurospin/Documents/Papers%20Library/Weyl-The%20robustness%20of%20quadratic%20voting-2017-Public%20Choice.pdf}, 
+year = {2017}
 }
-@misc{ERC20, 
-title = {{EIP 20: ERC-20 Token Standard}}, 
-url = {\url{https://eips.ethereum.org/EIPS/eip-20}},
-}
-@misc{Gitcoin, 
-title = {{Gitcoin}}, 
-url = {\url{https://gitcoin.co/}},
-}
-@misc{Compound, 
-title = {{Compound: The Money Market Protocol}}, 
-url = {\url{https://compound.finance}},
-}
-@misc{DSR, 
-title = {{Pot: Detailed Documentation}}, 
-url = {\url{https://docs.makerdao.com/smart-contract-modules/rates-module/pot-detailed-documentation},
-}
-@misc{Ethereum, 
-author = {Vitalik Buterin}, 
-title = {{Ethereum: A Next-Generation Smart Contract and Decentralized Application Platform}}, 
-url = {\url{https://ethereum.org/whitepaper/}},
-}
-@misc{Dai, 
-title = {{Dai: Detailed Documentation}}, 
-url = {\url{https://docs.makerdao.com/smart-contract-modules/dai-module/dai-detailed-documentation}},
-}
-@misc{Chai, 
-title = {{Chai – A simple ERC20 wrapper over the Dai Savings Rate}}, 
-url = {\url{https://chai.money/about.html}},
-}
-@misc{Solidity, 
-title = {{Solidity}}, 
-url = {\url{https://solidity.readthedocs.io/en/v0.6.8/}},
-}
-@misc{OZ, 
-author = {}, 
-title = {{OpenZeppelin Library}}, 
-url = {\url{https://github.com/OpenZeppelin/openzeppelin-contracts}},
-}
-@misc{Rinkeby, 
-author = {}, 
-title = {{AntsReview Contract Address}}, 
-url = {\newline https://rinkeby.etherscan.io/address/0x6956dF88120c44fb446761947cD4B83b553F229F},
-}
-@article{LiberalRadicalism, 
-author = {Vitalik Buterin, Zoë Hitzig, E. Glen Wey}, 
-title = {{Liberal Radicalism: A Flexible Design For Philanthropic Matching Funds}}, 
-pages = {37}, 
-year = {2018}
-}
-@article{ZKSNARKs, 
-author = {Christian Reitwießner}, 
-title = {{zkSNARKs in a Nutshell}}, 
-pages = {15}, 
-year = {}
-}
-@article{ZeroKnoledge, 
-author = {Manuel Blum, Alfredo De Santis, Silvio Micali, Giuseppe Persiano}, 
-title = {{Non-Interactive Zero-Knowledge}}, 
-pages = {1118}, 
-year = {1991}
+@article{BountyGit, 
+author = {Zhou, Jiayuan and Wang, Shaowei and Bezemer, Cor-Paul and Zou, Ying and Hassan, Ahmed E}, 
+title = {{Bounties in Open Source Development on GitHub: A Case Study of Bountysource Bounties}}, 
+eprint = {1904.02724}, 
+abstract = {{Due to the voluntary nature of open source software, it can be hard to find a developer to work on a particular task. For example, some issue reports may be too cumbersome and unexciting for someone to volunteer to do them, yet these issue reports may be of high priority to the success of a project. To provide an incentive for implementing such issue reports, one can propose a monetary reward, i.e., a bounty, to the developer who completes that particular task. In this paper, we study bounties in open source projects on GitHub to better understand how bounties can be leveraged to evolve such projects in terms of addressing issue reports. We investigated 5,445 bounties for GitHub projects. These bounties were proposed through the Bountysource platform with a total bounty value of \$406,425. We find that 1) in general, the timing of proposing bounties and the bounty-usage frequency are the most important factors that impact the likelihood of an issue being addressed. More specifically, issue reports are more likely to be addressed if they are for projects in which bounties are used more frequently and if they are proposed earlier. 2) The bounty value that an issue report has is the most important factor that impacts the issue-addressing likelihood in the projects in which no bounties were used before. Backers in such projects proposed higher bounty values to get issues addressed. 3) There is a risk of wasting money for backers who invest money on long-standing issue reports.}}, 
+journal = {arXiv}, 
+local-url = {file://localhost/Users/bt_neurospin/Documents/Papers%20Library/Zhou-Bounties%20in%20Open%20Source%20Development%20on%20GitHub-%20A%20Case%20Study%20of%20Bountysource%20Bounties-2019-arXiv.pdf}, 
+year = {2019}
 }
 @article{Haber-Secure, 
 author = {Haber, Stuart and Stornetta, W. Scott}, 
@@ -106,6 +63,21 @@ local-url = {file://localhost/Users/bt_neurospin/Documents/Papers%20Library/Ross
 year = {2017}, 
 rating = {5}
 }
+@article{RossHellauer-OPR, 
+author = {Ross-Hellauer, Tony and Görögh, Edit}, 
+title = {{Guidelines for open peer review implementation}}, 
+doi = {10.1186/s41073-019-0063-9}, 
+pmid = {30858990}, 
+abstract = {{Open peer review (OPR) is moving into the mainstream, but it is often poorly understood and surveys of researcher attitudes show important barriers to implementation. As more journals move to implement and experiment with the myriad of innovations covered by this term, there is a clear need for best practice guidelines to guide implementation. This brief article aims to address this knowledge gap, reporting work based on an interactive stakeholder workshop to create best-practice guidelines for editors and journals who wish to transition to OPR. Although the advice is aimed mainly at editors and publishers of scientific journals, since this is the area in which OPR is at its most mature, many of the principles may also be applicable for the implementation of OPR in other areas (e.g., books, conference submissions).}}, 
+pages = {4}, 
+number = {1}, 
+volume = {4}, 
+journal = {Research Integrity and Peer Review}, 
+keywords = {open peer-review,OPR,peer-review}, 
+local-url = {file://localhost/Users/bt_neurospin/Documents/Papers%20Library/Ross-Hellauer-Guidelines%20for%20open%20peer%20review%20implementation-2019-Research%20Integrity%20and%20Peer%20Review.pdf}, 
+year = {2019}, 
+rating = {4}
+}
 @article{DentalPublishing, 
 author = {Bal, A M and Mahawar, K K}, 
 title = {{Dental publishing: Peer review reviewed}}, 
@@ -126,7 +98,7 @@ author = {Gabizon, Ariel and Williamson, Zachary J.},
 title = {{Proposal: The Turbo-PLONK program syntax for specifying SNARK programs}}, 
 keywords = {privacy,AZTEC protocol,SNARK}, 
 local-url = {file://localhost/Users/bt_neurospin/Downloads/proposal-turbo_plonk.pdf}, 
-rating = {2},
+rating = {2}
 }
 @article{IPFS, 
 author = {Benet, Juan}, 
