Overall fixes (lost zSNARK reference)

--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -47,7 +47,7 @@ Peer-review is a necessary and essential quality control step for scientific pub
 %
 %
 \section{Introduction}
-From its birth in 2008 as a distributed ledger for the peer-to-peer electronic cash system Bitcoin \cite{BitcoinSatoshi}, blockchain technologies have spread far beyond the sole cryptocurrency domain, in particular after the implementation of a general purpose smart contract functionality introduced by Ethereum \cite{Ethereum}.
+From its birth in 2008 as a distributed ledger for the peer-to-peer electronic cash system Bitcoin \cite{BitcoinSatoshi}, blockchain technologies have spread far beyond the sole cryptocurrency domain, in particular after the implementation of a general purpose smart contract functionality introduced by Ethereum \cite{Ethereum-Wood}.
 Besides a growing number of applications ranging from De-Fi, healthcare, music industry, government, identity to cite but a few, blockchain technology has recently started to catalyse the attention of the scientific community as well \cite{Bitcoin-Nature-focus,vanRossum2017-DigSci} with the promising potential of being a 'game changer' in outdated and broken scientific practices and leading towards open science \cite{AES}. Indeed, scholars have pointed out how the intrinsic characteristics of blockchain technology set the basis for a open science infrastructure \cite{ReviewBlockchain2019} in which decisional processes are transparent and therefore more democratically accessible to all the stakeholders (researchers, reviewers, funders, taxpayers). Those are: the consensus algorithm \cite{ConsAlg}, a deterministic computational trust that allows for \emph{decentralization}, for which there are no trusted third parties; the Proof of Existence (PoE) that via \emph{cryptographic hashing} and \emph{timestamping}, creates a digital footprint able to keep a traceable chronological record of research objects that cannot be altered or retrieved (due to its property of \emph{immutability} or \emph{append-only})\cite{ReviewBlockchain2019}. In particular, a 'blockchainified science'\cite{BlockchainforScience} could 'reduce waste'\cite{ReducingWaste-Lancet}, by disclosing each step in the research cycle to 'scientific self-correction' way before the final publication step and therefore help fixing the current reproducibility crisis in science.
 \newline A thorny issue in the academic system that can - and should - be tackled by blockchain concerns the status and accreditation of peer-review, the core process of scientific validation currently facing a crisis \cite{Gropp-PeerRevStress}.
 In this paper we propose a solution to the problem of reviewers recognition based on the principles of tokenomics \cite{TokenEcon} and in line with the values of open science.
@@ -80,9 +80,9 @@ Thus, the system acts also as a reputation builder.
 \subsubsection{Transparency and re-usability of the records.} The peer-review history, including authors' replies and reviewers' recommendations, should be openly and permanently accessible to the community (in the form of 'open reports' of open peer-reviews) even before articles' publication in order to  make editorial decisions more democratic and prevent waste of knowledge. Following the example of models offered by journals peer-review consortia, such as the \emph{Neuroscience Peer Review Consortium}\footnote[4]{\emph{Neuroscience Peer Review Consortium}.\textsc{URL:}http://nprc.incf.org.} and independent companies like \emph{ResearchSquare} \footnote[5]{\emph{ResearchSquare}.\textsc{URL:}https://www.researchsquare.com.} and \emph{Peerage of Science} \footnote[6]{\emph{Peerage of Science}.\textsc{URL:} https://www.peerageofscience.org.}, that provide a scientific peer review service, peer-reviews in Ants-Review will be transferable across journals (like in 'cascading' or 'portable peer-reviews').
 
 \subsubsection{Accountability via pseudo-anonymity.} In order to counteract malicious behaviour (see 2.1) affecting the integrity of the reviews but also to correctly attribute the intellectual contributions making sure there are no conflict of interest, it's important to be able to track back the identities of the contributors to a peer-review report. This is possible if the platform acts like a version control system where commits are permanent and their hashes timestamped. InterPlanetary File System (IPFS) \cite{IPFS} is a peer-to-peer hypermedia protocol for storing data in a distributed file system over the internet which guarantees data \emph{immutability} and unique file identification via cryptographic hashes. IPFS' hashes are then stored inside the smart contracts' state that is timestamped into the Ethereum blocks where  the transactions take place; there, data remain unaltered and indelible. This notarization process is called Proof of Existence (PoE)and allows manual verification of the existence of the document.
-\newline To prevent retaliation for negative peer-reviews and to promote the participation of early researchers who might feel intimidated to judge the scientific work of senior authors, the Ants-Review system maintains the privacy of both authors and reviewers in a double-blind approach via Ethereum’s Externally Owned Accounts (EOA) addresses, zero-knowledge proofs, a cryptographic method where a party can prove to another party the possession of certain information, like a secret key, without revealing that information (see § Privacy in 3.2).
+\newline To prevent retaliation for negative peer-reviews and to promote the participation of early researchers who might feel intimidated to judge the scientific work of senior authors, the Ants-Review system maintains the privacy of both authors and reviewers in a double-blind approach via Ethereum’s Externally Owned Accounts (EOA) addresses, zero-knowledge proofs, a cryptographic method where a party can prove to another party the possession of certain information, like a secret key, without revealing that information (see 3.2).
 
-\subsubsection{Inclusiveness via gamification.} As a final step we propose that all the community is involved in the process of peer-reviewing abolishing the editorial selection process ('open participation', 'open interaction', 'open platform' \cite{OPR-Ross-Hellauer,RossHellauer-OPR}). In this way, the pool of reviewers is enriched and allows younger researchers to get the appropriate training through interactive feedback. Moreover, peer-reviews could be evaluated, commented, criticised by the other members of the scientific community, enabling a virtuous loop of verification. An interesting addition would be to introduce a rank of peer-reviews resulting from the community feedback via a voting process (see 4.1  Future developments). It's conceivable that the community members that engage in assessing the quality of peer-reviews could be incentivized as well. This solution would create a self-reinforcing ethical behaviour where the fair evaluation of peer-reviews would be also in the interest of the agents at play.
+\subsubsection{Inclusiveness via gamification.} As a final step we propose that all the community is involved in the process of peer-reviewing abolishing the editorial selection process ('open participation', 'open interaction', 'open platform' \cite{OPR-Ross-Hellauer,RossHellauer-OPR}). In this way, the pool of reviewers is enriched and allows younger researchers to get the appropriate training through interactive feedback. Moreover, peer-reviews could be evaluated, commented, criticised by the other members of the scientific community, enabling a virtuous loop of verification. An interesting addition would be to introduce a rank of peer-reviews resulting from the community feedback via a voting process (see 4.1). It's conceivable that the community members that engage in assessing the quality of peer-reviews could be incentivized as well. This solution would create a self-reinforcing ethical behaviour where the fair evaluation of peer-reviews would be also in the interest of the agents at play.
 
 \subsection{Implementation}
 
@@ -125,7 +125,7 @@ Access management of the Ants-Review protocol is defined and controlled by AntsR
 \newline AntsReviewRoles also integrates a circuit breaker design pattern via \emph{Pausable.sol} by OpenZeppelin to allow the Pauser Role, that by default is granted to the Owner of the smart contracts, to pause (or unpause) all the functions in case of a security emergency, such as an attack to the smart contracts.
 
 \subsubsection{Privacy}
-The anonymity of an agent in the system is achieved in two ways: via pseudo-anonymity, granted through Ethereum's EOAs that can pseudo-obscure the identity of the agent and via private transactions allowed by AZTEC Protocol\cite{AZTEC}'s security layer.
+The anonymity of an agent in the system is achieved in two ways: via pseudo-anonymity, granted through Ethereum's EOAs that can pseudo-obscure the identity of the agent and via private transactions allowed by AZTEC Protocol \cite{AZTEC}'s security layer.
 
 \paragraph{\textbf{Pseudo-anonymity}.}EOAs in Ethereum are controlled via private keys. However, the privacy is limited by the fact that both the blockchain and its transactions are public.  Therefore, the details of the transactions are visible to anyone by browsing a block explorer (such as Etherscan) and are subject to data mining that could extract value and identify users in the blockchain.
 \paragraph{\textbf{Private transactions}.}AZTEC Protocol  was conceived to enable privacy on public blockchains. It uses Zero-Knowledge Succinct Non-Interactive Argument of Knowledge (ZK-SNARKs)\cite{ZKSNARKs} and homomorphic encryption\footnote[11]{\emph{Homomorphic Encryption}.\textsc{URL:}https://vitalik.ca/general/2020/07/20/homomorphic.html.} to validate encrypted transactions.
@@ -158,7 +158,7 @@ In this paper we addressed a crucial problem within scholarly academic communica
 \small{
 \subsubsection{Supplementary material}
 Source code, DOI: 10.5281/zenodo.3971044; 
-\newline DApp, https://ants-review.on.fleek.co;
+\newline DApp: https://ants-review.on.fleek.co;
 
 \subsubsection{Declaration of Competing Interest}
 The authors declare no competing interests.
