--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -54,17 +54,16 @@ In this paper we propose a solution to the problem of reviewers recognition base
 
 \section{Background}
 \subsection{Peer-review: present problems and mild solutions}
-Peer review is still the only quality control mechanism devoted to evaluate scientific outcomes. The purpose of peer review is "improving the quality of the published paper, determining the originality of the manuscript, determining the importance of the findings, detecting fraud, and detecting plagiarism." \cite{Gropp-PeerRevStress}. However, the system is 'ﬂawed' and outdated \cite{Smith2006} and presents multifaceted issues, here reviewed.
-\subsubsection{A slow multi-stage process.} The main issues affecting the effectiveness of peer-review is the delay between paper submission and journal acceptance for publication. The traditional peer-review process is completely controlled by the editor(s). The author(s) submits manuscript to the journal where an editorial team assesses if the paper meets the scopes of the journal and novelty criteria. If the editorial decision is to send the manuscript for review, the handling editor personally selects potential reviewers. The reviewers identity is usually only known to the editor but is hidden to the authors or the other reviewers themselves (\emph{single-blind review}). Reviewers independently conduct their reviews by exposing in their reports strengths and weaknesses of the manuscript and sometimes substantially improving the draft. Depending on if the decision is a major or minor revision, authors are invited to re-submit a corrected or improved version of the manuscript. The same reviewers might be contacted again to continue the same peer-review process. This process can take multiple rounds and is a huge time investment both for authors and reviewers. An analysis of all papers published in \emph{PubMed} for a time period of 30 years claims that the median review time is around 100 days \cite{Kendall-peerrev}.
-\subsubsection{Lack of recognition.} Peer-reviewing is an invisible activity purely conducted on voluntary basis, neither paid by the journals or officially credited via standard scientific metrics (such as the ones that establish the 'impact factor' of an author). Thus, it does not lead to advancements in career or help securing grants. Researchers are motivated to do peer-review by a sense of belonging and a desire to 'give back' to the community. A major consequence of not promoting incentives for the quality (and quantity) of peer-reviews is to either slow down publication of potentially good research which awaits for validation or let bad science be published through sloppy and uncritical reviews.
-\subsubsection{Fraud and misconduct.} Due to the 'publish or perish culture' pressures, unethical behaviour from reviewers has been occasionally reported, from abusive behaviour towards authors \cite{Smith2006,tragedy-reviewers} to identity fraud. Some studies have reported an improvement in the transparency and civility of the review process when open reports are released according to the standards of \emph{open peer review}.
-\subsubsection{Social and cognitive biases.} Given the fact that anonymity is usually asymmetrically applied only for reviewers, many power related dynamics can influence the reviewers decision, such as gender or cultural discrimination and social prestige of the institution. To solve this problem some journals have implemented \emph{double-blind review} process (identity of both authors and reviewers are masked) which seems to reduce the bias towards minorities.
-\subsubsection{Peer reviews need to be...reviewed.} There is high variability in the reliability and depth of reviews and a recurrent question is: "Who watches the watchers?".
-\subsubsection{Need for more reviewers.} There is a disproportion between the progressive increase in journals publications and the number of experienced reviewers selected for the task which demands an expansion of the reviewer's pool including early career scientists \cite{tragedy-reviewers}.
+Peer review is still the only quality control mechanism devoted to evaluate scientific outcomes. The purpose of peer review is "improving the quality of the published paper, determining the originality of the manuscript, determining the importance of the findings, detecting fraud, and detecting plagiarism." \cite{Gropp-PeerRevStress}. However, the system is 'ﬂawed' and outdated \cite{Smith2006} and presents multifaceted issues \cite{Walker2015-trends}, here reviewed.
+\subsubsection{A slow multi-stage process.} The main issues affecting the effectiveness of peer-review is the delay between paper submission and journal acceptance for publication. The traditional peer-review process is centralized around the publisher's editor(s). The author(s) submits manuscript to the journal where an editorial team assesses if the paper meets the scopes of the journal and novelty criteria. If the editorial decision is to send the manuscript for review, the handling editor personally selects potential reviewers. The reviewers identity is usually only known to the editor but is hidden to the authors or the other reviewers themselves (\emph{single-blind review}). Reviewers independently conduct their reviews by exposing in their reports strengths and weaknesses of the manuscript and sometimes substantially improving the draft. Depending on if the decision is a major or minor revision, authors are invited to re-submit a corrected or improved version of the manuscript. The same reviewers might be contacted again to continue the same peer-review process. This process can take multiple rounds and is a huge time investment both for authors and reviewers. An analysis of all papers published in \emph{PubMed} for a time period of 30 years claims that the median review time is around 100 days \cite{Kendall-peerrev}.
+\subsubsection{Lack of recognition and incentives.} Peer-reviewing is an invisible activity purely conducted on voluntary basis, neither paid by the journals or officially credited via standard scientific metrics (such as the ones that establish the 'impact factor' of an author). Thus, it does not lead to advancements in career or help securing grants. Researchers are motivated to do peer-review by a sense of belonging and a desire to 'give back' to the community. A major consequence of not promoting incentives for the quality (and quantity) of peer-reviews is to either slow down publication of potentially good research which awaits for validation \cite{HauserIncent} or let bad science be published through sloppy and uncritical reviews.
+\subsubsection{Fraud and misconduct.} Due to the 'publish or perish culture' pressures, unethical behaviour from reviewers has been occasionally reported, from abusive behaviour towards authors \cite{Smith2006,tragedy-reviewers} to identity fraud. Some studies have reported an improvement in the transparency and civility of the review process when open reports are released according to the standards of \emph{open peer review} \cite{PeerRev-NatComm}.
+\subsubsection{Social and cognitive biases.} Given the fact that anonymity is usually asymmetrically applied only for reviewers, many power related dynamics can influence the reviewers decision \cite{Tennant2017-F1000R}, such as gender or cultural discrimination and social prestige of the institution. To solve this problem some journals have implemented \emph{double-blind review} process (identity of both authors and reviewers are masked) which seems to reduce the bias towards minorities.
+\subsubsection{Peer reviews need to be...reviewed.} There is high variability in the reliability and depth of reviews and a recurrent question is: "Who watches the watchers?" \cite{Tennant2017-F1000R}.
+\subsubsection{Need for more reviewers.} There is a disproportion between the progressive increase in journals publications and the number of experienced reviewers selected for the task which demands an expansion of the reviewer's pool including early career scientists \cite{tragedy-reviewers,Warne-RewRev}.
 
-\subsection{Related work} Some mild attempts to credit peer review have been handled without much success by journals via attribution of virtual 'badges', certificates of performance, citation in annual editorials where performance, though, is assessed only in terms of quantity of reviews but not quality.
-\newline REVIEWER RECOGNITION SERVICE FOR PUBLISHERS\emph{Publons}\footnote[1]{\emph{Publons}.\textsc{URL:} https://publons.com/about/home.}, integrated with ORCID (researcher identifier), that provides a reputational system of peer-review metric based on authors' prolificacy of reviews.
-\newline Alternative proposals to ours to improve the peer-review system with an incentivization mechanism on the blockchain have been made by Spearpoint \cite{ResearchCoin} who proposes \emph{r-coin} (for ‘ReviewCoin’ or ‘ResearchCoin’), a cryptocurrency that researchers earn for undertaking peer-reviews and that can used to pay for publication fees; \emph{ScienceMiles} \cite{ScienceMiles} a cryptocurrency for incentivizing peer-reviews through a blockchain-based platform and an open peer-review process; Avital \cite{AvitalToken} suggests a token-based peer-review payment system; \emph{INFINITCODEX (I8X)} \cite{I8X}, a platform that promotes cooperative user behaviour through dynamic research papers that undergo  continuous peer review process. The system implements cryptoeconomical incentives for building reputation in the community of users. \emph{Decentralized Science} \cite{DecentralSc2,DecentralSc1}, \emph{Pevo} \cite{Pevo}, \emph{CryptSubmit} \cite{CryptSubmit} and \emph{MarsChain} \cite{MarsChain} have instead respectively focused on features such as decentralization and security.
+\subsection{Related work} Some mild attempts to credit peer review have been handled without much success by journals via attribution of virtual 'badges', certificates of performance, citation in annual editorials \cite{Tennant2017-F1000R} where performance, though, is assessed only in terms of quantity of reviews but not quality \cite{Warne-RewRev}.
+\newline Partnering with publishers, the startup \emph{Publons}\footnote[1]{\emph{Publons}.\textsc{URL:} https://publons.com/about/home.} provides a free metric service for track, verification and recognition of publications, peer-reviews and journal editing in a single researcher identifier that showcases a record of scientific activity and impact based on authors' productivity.
 
 \section{System concept}
 In this paper we propose Ants-Review, a new incentivisation mechanism built on Ethereum that issues open peer-reviews to validate scientific papers while preserving the anonymity of its contributors. We imagine a final paper originating from the peer-review process as a complex system that emerges from the interactions between the authors and the reviewers, a whole that is more than the sum of its parts. Therefore, the name evokes an ant colony as a self-organising organism in which all micro-contributions of the individuals emerge into complex behaviour.
