--- a/ref2-related.bib
+++ b/ref2-related.bib
@@ -23,6 +23,21 @@ journal = {Communications of the Association for Information Systems},
 local-url = {file://localhost/Users/bt_neurospin/Documents/Papers%20Library/Avital-Peer%20Review-%20Toward%20a%20Blockchain-enabled%20Market-based%20Ecosystem-2018-Communications%20of%20the%20Association%20for%20Information%20Systems.pdf}, 
 year = {2018}
 }
+@article{Warne-RewRev, 
+author = {Warne, Verity}, 
+title = {{Rewarding reviewers – sense or sensibility? A Wiley study explained}}, 
+issn = {1741-4857}, 
+doi = {10.1002/leap.1002}, 
+abstract = {{In July 2015, Wiley surveyed over 170,000 researchers in order to explore peer reviewing experience; attitudes towards recognition and reward for reviewers; and training requirements. The survey received 2,982 usable responses (a response rate of 1.7\%). Respondents from all markets indicated similar levels of review activity. However, analysis of reviewer and corresponding author data suggests that US researchers in fact bear a disproportionate burden of review, while Chinese authors publish twice as much as they review. Results show that while reviewers choose to review in order to give back to the community, there is more perceived benefit in interacting with the community of a top-ranking journal than a low-ranking one. The majority of peer review training received by respondents has come either in the form of journal guidelines or informally as advice from supervisors or colleagues. Seventy-seven per cent show an interest in receiving further reviewer training. Reviewers strongly believe that reviewing is inadequately acknowledged at present and should carry more weight in their institutions' evaluation process. Respondents value recognition initiatives related to receiving feedback from the journal over monetary rewards and payment in kind. Questions raised include how to evenly expand the reviewer pool, provide training throughout the researcher career arc, and deliver consistent evaluation and recognition for reviewers.}}, 
+pages = {41--50}, 
+number = {1}, 
+volume = {29}, 
+journal = {Learned Publishing}, 
+keywords = {reward,incentivization}, 
+local-url = {file://localhost/Users/bt_neurospin/Documents/Papers%20Library/Warne-Rewarding%20reviewers%20–%20sense%20or%20sensibility-%20A%20Wiley%20study%20explained-2016-Learned%20Publishing.pdf}, 
+year = {2016}, 
+rating = {4}
+}
 @article{I8X, 
 author = {Duh, Emilija Stojmenova and Duh, Andrej and Droftina, Uroš and Kos, Tim and Duh, Urban and Korošak, Tanja Simonič and Korošak, Dean}, 
 title = {{Publish-and-Flourish: Using Blockchain Platform to Enable Cooperative Scholarly Communication}}, 
@@ -43,7 +58,7 @@ issn = {0302-9743},
 doi = {10.1007/978-3-030-10549-5\_28}, 
 abstract = {{Current Manuscript Review Systems (Conference/Journal) rely on a centralized services (like EasyChair, iChair, HotCRP or EDAS), which manage the whole process that starts with manuscript submissions to notification of the results. As these review systems are centralized, the trust is based on a single entity. The fairness of the system hinges on the honesty of the central controlling authority. This dependency can be avoided by decentralizing the source of the trust. Bitcoin has shown the power of decentralization and shared database through blockchain technology, and currently is being studied for its immense impact on FinTech. We leverage blockchain to address the above concern and present a decentralized manuscript review system that provides trust and fairness. We call this system MaRSChain. As a proof of concept, we develop a prototype of MaRSChain system on top of Hyperledger Fabric platform. To the best of our knowledge, this is the first ever decentralized manuscript review system based on Blockchain.}}, 
 pages = {355--366}, 
-local-url = {file://localhost/Users/bt_neurospin/Downloads/MaRSChainFinal%20(1).pdf}, 
+local-url = {file://localhost/Users/bt_neurospin/Documents/Papers%20Library/MaRSChainFinal%20(1).pdf}, 
 year = {2018}
 }
 @article{CryptSubmit, 
@@ -69,21 +84,6 @@ journal = {Publications},
 local-url = {file://localhost/Users/bt_neurospin/Downloads/A_Proposed_Currency_System_for_Academic_Peer_Revie%20(1).pdf}, 
 year = {2017}, 
 rating = {3}
-}
-@article{10.1371/journal.pbio.0050107, 
-author = {Hauser, Marc and Fehr, Ernst}, 
-title = {{An Incentive Solution to the Peer Review Problem}}, 
-issn = {1544-9173}, 
-doi = {10.1371/journal.pbio.0050107}, 
-pmid = {17439298}, 
-pmcid = {PMC1852148}, 
-pages = {e107}, 
-number = {4}, 
-volume = {5}, 
-journal = {PLoS Biology}, 
-keywords = {incentivization}, 
-local-url = {file://localhost/Users/bt_neurospin/Documents/Papers%20Library/Hauser-An%20Incentive%20Solution%20to%20the%20Peer%20Review%20Problem-2007-PLoS%20Biology.pdf}, 
-year = {2007}
 }
 @article{Sharples-Kudos, 
 author = {Sharples, Mike and Domingue, John}, 
